# 5-games

./: README.md  export_presets.cfg  project.godot
code/gdnlib/: new_gdnativelibrary.gdnlib
code/gdns/: Node2D.gdns  roed_block.gdns
code/global/: global.gd
cpp_project/learning_cpp/: CMakeLists.txt  Makefile  NOTE: :  c++_jokes ============================================  learning_cpp.kdev4
cpp_project/learning_cpp/.kdev4/: learning_cpp.kdev4
cpp_project/learning_cpp/include/: border_area2d.h  intro.h  player.h  road.h  test.h
cpp_project/learning_cpp/include/game_1/: game_1_border.h  game_1_xo.h
cpp_project/learning_cpp/include/game_2/: main.h
cpp_project/learning_cpp/include/game_3/: world.h
cpp_project/learning_cpp/include/game_4/: ping_pong.h
cpp_project/learning_cpp/src/: GodotLibrary.cpp  border_area2d.cpp  intro.cpp  player.cpp  road.cpp  test.cpp
cpp_project/learning_cpp/src/game_1/: game_1_border.cpp  game_1_xo.cpp
cpp_project/learning_cpp/src/game_2/: main.cpp
cpp_project/learning_cpp/src/game_3/: world.cpp
cpp_project/learning_cpp/src/game_4/: ping_pong.cpp
game 2/: border.gdns  borders.tscn  xo.tscn
game 3/: ball.tscn  block.tscn  main scene.tscn  platform.tscn
game 3/code/: new_script.gd  new_script.gdns
game 4/: platform.tscn  player.tscn  world.gdns  world.tscn
game 5/: ping_pong.gdns  ping_pong.tscn
objects/: road_pice.tscn
scense/: KinematicBody2D.gdns  Node2D.gd  Node2D.tscn  intro.gdns  intro.tscn
